// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthComponent 1`] = `
<div>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.png"
    />
    <h1
      className="App-title"
    >
      Lumi
    </h1>
  </header>
  <FirebaseAuth
    firebaseAuth={undefined}
    uiConfig={Object {}}
  />
</div>
`;

exports[`BootstrapStyleComponent 1`] = `
<link
  crossOrigin="anonymous"
  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
  rel="stylesheet"
/>
`;

exports[`CareProfileBasicInfoComponent 1`] = `
<tbody>
  <Connect(CareProfileEditWrapperComponent)
    fieldId="firstName"
    formFieldGenerator={[Function]}
    title="First Name"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="lastName"
    formFieldGenerator={[Function]}
    title="Last Name"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="birthday"
    formFieldGenerator={[Function]}
    isDateField={true}
    title="Birthday"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="gender"
    formFieldGenerator={[Function]}
    title="Gender"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="email"
    formFieldGenerator={[Function]}
    title="Email"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="address"
    formFieldGenerator={[Function]}
    title="Address"
  />
</tbody>
`;

exports[`CareProfileCareInfoComponent 1`] = `
<tbody>
  <Connect(CareProfileEditWrapperComponent)
    fieldId="needsAndPreferences"
    formFieldGenerator={[Function]}
    title="Needs and Preferences"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="thingsThatDelight"
    formFieldGenerator={[Function]}
    title="Things that Delight"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="placesOfInterest"
    formFieldGenerator={[Function]}
    title="Places of Interest"
  />
</tbody>
`;

exports[`CareProfileComponent 1`] = `null`;

exports[`CareProfileEditWrapperComponent 1`] = `
<tr>
  <td>
    
  </td>
  <td
    className="multiline"
  >
    
  </td>
  <td>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="button-icon glyphicon glyphicon-pencil"
      />
      Edit
    </button>
  </td>
</tr>
`;

exports[`CareProfileMedicalInfoComponent 1`] = `
<tbody>
  <Connect(CareProfileEditWrapperComponent)
    fieldId="typeOfDementia"
    formFieldGenerator={[Function]}
    title="Type of Dementia"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="dateOfDiagnosis"
    formFieldGenerator={[Function]}
    isDateField={true}
    title="Date of Diagnosis"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="medications"
    formFieldGenerator={[Function]}
    title="Medications"
  />
  <Connect(CareProfileEditWrapperComponent)
    fieldId="providers"
    formFieldGenerator={[Function]}
    title="Providers"
  />
</tbody>
`;

exports[`CareProfileNewMemberComponent 1`] = `
<div
  className="sc-bdVaJa djJVkl"
>
  <h2>
    Please share details about the new member :)
  </h2>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <td>
          First Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Last Name
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Birthday
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Gender
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Email
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Address
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Type of Dementia
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Date of Diagnosis
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Medications
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Providers
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Needs and Preferences
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Things that Delight
        </td>
        <td>
          <div />
        </td>
      </tr>
      <tr>
        <td>
          Places of Interest
        </td>
        <td>
          <div />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="sc-bdVaJa cXgeQK"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`CareProfileNewMemberFormFieldComponent 1`] = `
<tr>
  <td>
    
  </td>
  <td>
    <div />
  </td>
</tr>
`;

exports[`CareProfileSelectCareRecipientComponent 1`] = `
<div
  className="sc-bdVaJa hgkmdP"
>
  <h2>
    Welcome to CareProfile! Please choose a care recipient:
  </h2>
  <div
    className="form-group"
  >
    <select
      className="form-control"
      id="userList"
      onChange={[Function]}
      placeholder="Select a care recipient"
      type={undefined}
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
</div>
`;

exports[`GroupCreateComponent 1`] = `
<div>
  <h2>
    Create New Group
  </h2>
  <form>
    <div
      className="form-group has-feedback"
    >
      <label
        className="control-label"
        htmlFor="formGroupNewGroup"
      >
        Choose a group name for your new group
      </label>
      <input
        className="form-control"
        id="formGroupNewGroup"
        onChange={[Function]}
        placeholder="Enter new group name"
        type="text"
        value=""
      />
      <span
        className="help-block"
      >
        Lumi will generate a Group ID to share with family and friends on the next page
      </span>
    </div>
    <button
      className="btn btn-lg btn-primary btn-block"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create Group
    </button>
  </form>
</div>
`;

exports[`GroupJoinComponent 1`] = `
<div>
  <h2>
    Join Existing Group
  </h2>
  <form>
    <div
      className="form-group has-feedback"
    >
      <label
        className="control-label"
        htmlFor="formGroupJoinGroup"
      >
        Join an existing Lumi Group
      </label>
      <input
        className="form-control"
        id="formGroupJoinGroup"
        onChange={[Function]}
        placeholder="Enter Lumi Group ID"
        type="text"
        value=""
      />
      <span
        className="help-block"
      >
        This ID must be a valid group ID of an existing Lumi Group
      </span>
    </div>
    <button
      className="btn btn-lg btn-default btn-block"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Join Group
    </button>
  </form>
</div>
`;

exports[`HomeComponent 1`] = `null`;

exports[`NavBottomComponent 1`] = `
<nav
  className="nav-bottom navbar navbar-default navbar-fixed-bottom"
>
  <div
    className="container"
  >
    <div
      className="sc-bdVaJa cNkfwA"
    >
      <ul
        className="nav navbar-nav"
        role={null}
      >
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m16.6 33.4h-8.2v-13.4h-5l16.6-15 16.6 15h-5v13.4h-8.2v-10h-6.8v10z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Timeline
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m31.6 21.6h-10v10h-3.2v-10h-10v-3.2h10v-10h3.2v10h10v3.2z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Add
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m15 8.4h20v6.6h-20v-6.6z m0 23.2v-6.6h20v6.6h-20z m0-8.2v-6.8h20v6.8h-20z m-8.4-8.4v-6.6h6.8v6.6h-6.8z m0 16.6v-6.6h6.8v6.6h-6.8z m0-8.2v-6.8h6.8v6.8h-6.8z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Summary
              </div>
            </div>
          </a>
        </li>
        <li
          className="nav-bottom-item"
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
          >
            <div
              className="sc-bdVaJa djJVkl"
            >
              <svg
                fill="currentColor"
                height={24}
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 40 40"
                width={24}
              >
                <g>
                  <path
                    d="m20 23.4c4.5 0 13.4 2.1 13.4 6.6v3.4h-26.8v-3.4c0-4.5 8.9-6.6 13.4-6.6z m0-3.4c-3.7 0-6.6-3-6.6-6.6s2.9-6.8 6.6-6.8 6.6 3.1 6.6 6.8-2.9 6.6-6.6 6.6z"
                  />
                </g>
              </svg>
              <div
                className="nav-bottom-text"
              >
                Profile
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`NavTopComponent 1`] = `
<div
  className="nav-top"
>
  <nav
    className="navbar navbar-default navbar-fixed-top"
  >
    <div
      className="container"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
        >
          <div
            className="button-text-accent"
          >
            <b>
              Lumi
            </b>
          </div>
        </a>
        <button
          className="navbar-toggle collapsed"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Toggle navigation
          </span>
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
          <span
            className="icon-bar"
          />
        </button>
      </div>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <ul
          className="nav navbar-nav navbar-right"
          role={null}
        >
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
            >
              Sign Out
            </a>
          </li>
        </ul>
        <p
          className="navbar-text navbar-right"
        />
      </div>
    </div>
  </nav>
</div>
`;

exports[`NewUserComponent 1`] = `
<div>
  <h1>
    Welcome to Lumi, !
  </h1>
  Before we begin, you must either create or join a Lumi Group.
  <Connect(GroupCreateComponent) />
  <br />
  Or
  <br />
  <Connect(GroupJoinComponent) />
</div>
`;

exports[`RootComponent 1`] = `null`;

exports[`TimelineComponent 1`] = `
<div>
  <Connect(TimelineFiltersComponent) />
  <Table
    bordered={false}
    bsClass="table"
    condensed={false}
    hover={false}
    responsive={false}
    striped={false}
  >
    <tbody>
      
    </tbody>
  </Table>
</div>
`;

exports[`TimelineStoryContentComponent 1`] = `
<Styled(Component)
  alignItems="flex-start"
  display="flex"
  element="div"
  flexDirection="column"
>
  <div
    className="timeline-story-padding"
  />
  <Image
    bsClass="img"
    circle={false}
    className="timeline-story-content-image"
    responsive={true}
    rounded={false}
    src=""
    thumbnail={false}
  />
</Styled(Component)>
`;

exports[`TimelineStoryHeaderComponent 1`] = `
<Styled(Component)
  alignItems="center"
  className="timeline-story-padding"
  display="flex"
  element="div"
>
  <Image
    bsClass="img"
    circle={true}
    className="timeline-story-header-profile-image"
    responsive={false}
    rounded={false}
    src={undefined}
    thumbnail={false}
  />
  <span
    className="space-horizontal"
  />
  <Styled(Component)
    display="flex"
    element="div"
    flexDirection="column"
  >
    <div>
      undefined undefined
       • 
    </div>
    <Styled(Component)
      display="flex"
      element="div"
    >
      <div />
    </Styled(Component)>
  </Styled(Component)>
</Styled(Component)>
`;
